# datafun-03-analytics

./: .pre-commit-config.yaml  AGENTS.md  ANNOTATIONS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  ruff.strict.toml  zensical.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml
data/processed/: json_people_by_country.txt  jt_text_summary.txt  jt_xlsx_word_count.txt  justice_score_stats.txt
data/raw/: jaso_people.json  jt_feedback.xlsx  jt_sample_text.txt  justice_test_scores.csv
docs/: api.md  glossary.md  index.md  project-instructions.md
src/datafun/: app_case.py  app_jt.py  case_csv_pipeline.py  case_json_pipeline.py  case_text_pipeline.py  case_xlsx_pipeline.py  jt_csv_pipeline.py  jt_json_pipeline.py  jt_text_pipeline.py  jt_xlsx_pipeline.py
tests/: test_app_case.py  test_csv_pipeline.py  test_json_pipeline.py  test_text_pipeline.py  test_xlsx_pipeline.py
